# stakanov

./: .gitignore  README.md  files.html  index.html  pyproject.toml
_modules/files/: models.html
_sources/: collect.rst.txt  files.migrations.rst.txt  files.rst.txt
docs/source/: conf.py  index.rst  stakanov_web.rst
src/: gui.py  main.py  stakanov.py
src/stakanov/: db.sqlite3  manage.py
src/stakanov/app/: gui.py  main.py  stakanov.py
src/stakanov/collect/: database_saver.py  gui.py  stakanov_logic.py
src/stakanov/files/: forms.py  models.py  views.py
src/stakanov/files/migrations/: 0001_initial.py  0002_alter_fileinfo_created_at_alter_fileinfo_modified_at.py
src/stakanov/files/templates/files/: error.html  extension.html  image.html  index.html  pdf.html  size.html
src/stakanov/files/tests/: test_database.py  test_logic.py  test_views.py
src/stakanov/stakanov_web/: asgi.py  settings.py  urls.py  wsgi.py
